# idfm-prim-api

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  nightly-sync.yml
clients/idfm_ivtr_requete_unitaire/: .gitlab-ci.yml  .travis.yml  pyproject.toml  setup.py  tox.ini
clients/idfm_ivtr_requete_unitaire/idfm_ivtr_requete_unitaire/: api_client.py  exceptions.py
clients/idfm_ivtr_requete_unitaire/idfm_ivtr_requete_unitaire/api/: default_api.py
clients/idfm_ivtr_requete_unitaire/idfm_ivtr_requete_unitaire/models/: __init__.py
clients/idfm_ivtr_requete_unitaire/test/: test_default_api.py
data/schema/: arrets-lignes.schema.json  referentiel-des-lignes.schema.json  zones-d-arrets.schema.json
docs/: developer_guide.md
manifests/: apis.yml  datasets.yml  urls_of_interest.yml
prim_api/: __init__.py  client.py  datasets.py  refs.py  updater.py
samples/: README.md  browse_arrets_lignes.py  browse_referentiel_lignes.py  browse_zones_darrets.py  get_passages.py  next_passages_board.py
specs/: idfm_ivtr_requete_unitaire.json  idfm_ivtr_requete_unitaire.meta.json
tests/: test_generate_clients.py  test_prim_api.py  test_refs.py  test_sync_datasets.py  test_sync_specs.py  test_validate_datasets.py
tools/: generate_clients.py  sync_all.py  sync_datasets.py  sync_specs.py  validate_datasets.py
